--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<h1>Wendy G. Bite</h1>
 
 		<nav>
-			<a href="URL" alt="About Me">About Me</a> | 
-			<a href="URL" alt="Resume">Resume</a>
+			<a href="index.html" alt="About Me">About Me</a> | 
+			<a href="resume.html" alt="Resume">Resume</a>
 		</nav>
 
 		<section>
