--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,6 @@
 		<section>
 			<header><h3>Relevant Experience</h3></header>
 
-			<article>
 				<ul>
 
 				<li><strong>Web Developer</strong>, GitHub 2013 - present
@@ -45,24 +44,21 @@
 				<li><strong>Senior Vice President</strong>, The Golden Girls Appreciation Society 1985 - 1992
 					<p>Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.</p></li>
 					
-				<li><strong>Certified Mint Candy and Freshly Baked Cookies Distributor</strong>. 1960S
+				<li><strong>Certified Mint Candy and Freshly Baked Cookies Distributor</strong> 1960S
 					<p>Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p></li>
 
 				</ul>
-			</article>
+
 		</section>
 
 		<section>
 			<header><h3>Education</h3></header>
 
-			<article>
 			<ul>
 				<li>General Assembly WDI — 2013</li>
 				<li>Queens College B.A. 1923</li>
 				<li>Brooklyn Etiquette School For Girls 1920 (Honors)</li>
 			</ul>
-			</article>
-
 
 		<footer>
 			<nav>
