--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 		<footer>
 			<nav>
-			<a href="URL" alt="Facebook">Facebook</a> | 
-			<a href="URL" alt="Twitter">Twitter</a> |
-			<a href="URL" alt="Instagram">Instagram</a> |
-			<a href="URL" alt="LinkedIn">LinkedIn</a>
+			<a href="#" alt="Facebook">Facebook</a> | 
+			<a href="#" alt="Twitter">Twitter</a> |
+			<a href="#" alt="Instagram">Instagram</a> |
+			<a href="#" alt="LinkedIn">LinkedIn</a>
 			</nav>
 		</footer>
 
