--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	</head>
 
 	<body>
+		
+		<header>
 
 		<h1>Wendy G. Bite</h1>
 
@@ -16,9 +18,11 @@
 
 		<hr>
 
+		</header>
+
 		<section>
 
-			<header><h2>About Me</h2></header>
+			<h2>About Me</h2>
 			
 			<article>
 
