--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,8 @@
 	</head>
 
 	<body>
+	
+		<header>
 
 		<h1>Wendy G. Bite</h1>
 
@@ -16,9 +18,11 @@
 
 		<hr>
 
+		</header>
+
 		<section>
 
-			<header><h2>Resume</h2></header>
+			<h2>Resume</h2>
 			
 			<article>
 
@@ -54,7 +58,7 @@
 		</section>
 
 		<section>
-			<header><h3>Education</h3></header>
+			<h3>Education</h3>
 
 			<ul>
 				<li>General Assembly WDI — 2013</li>
